# swagger_example_gen

./: .gitignore  Cargo.toml  README.md
resources/: curl_collection.md
resources/assistants/: curl_collection.md
resources/assistants/azure_openai/: assistants.http  files.http
resources/assistants/openai/: code_interpreter.http  runs.http
resources/azure_openai/: audio.http  chat_completions.http  completions.http
resources/inference/: curl_collection.md
resources/inference/azure_openai/: chat_completions.http
resources/inference/openai/: chat_completions.http  completions.http
resources/openai/: chat_completions.http
sample_files/: text.txt
scripts/: curl_collection.md  curl_collection.txt
src/: main.rs
src/http_client/: credential_manager.rs  mod.rs
src/models/: mod.rs
