[package]
name = "azure_openai_example_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

azure_core = { version = "0.14" , features = ["enable_reqwest"]}
azure_identity = { version="0.14" }
tokio = { version = "1" , features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
dotenv = "0.15"
